--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -2,6 +2,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.hackathon_us_canada.MainActivity" >
 
+    <item android:id="@+id/action_add"
+          android:icon="@drawable/ic_action_new"
+          android:title="@string/action_add"
+          android:showAsAction="ifRoom" />
+
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
