--- a/res/layout/item_pager_image.xml
+++ b/res/layout/item_pager_image.xml
@@ -1,21 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:padding="1dip" >
 
     <ImageView
         android:id="@+id/pager_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_width="200dp"
+        android:layout_height="300dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="10dip"
+        android:layout_marginLeft="20dip"
         android:adjustViewBounds="true" />
 
     <ProgressBar
         android:id="@+id/loading"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_width="200dp"
+        android:layout_height="300dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="10dip"
+        android:layout_marginLeft="20dip"
         android:visibility="gone" />
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="500dp"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@id/pager_image"
+        android:layout_marginTop="10dip"
+        android:layout_marginLeft="20dip"
+        android:layout_toRightOf="@id/pager_image"
+        android:textStyle="bold" 
+        android:textSize = "25dip" />
+ 
+    <TextView
+        android:id="@+id/summary"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dip"
+        android:layout_marginLeft="20dip"
+        android:layout_below="@id/pager_image"
+        android:gravity="right"
+        android:textSize="20sp"
+        android:textStyle="italic" />
+    
+</RelativeLayout>
