--- a/res/layout/book_row_layout.xml
+++ b/res/layout/book_row_layout.xml
@@ -1,55 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" 
-    android:layout_margin="10dp">
-    
-    
-     <ImageView
-        android:id="@+id/img"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_marginLeft="5dp"
-        android:layout_alignParentLeft="true"/>
- 
+    android:layout_height="wrap_content"
+    android:layout_margin="10dp" >
+
+    <ImageView
+        android:id="@+id/thumbnail"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:scaleType="centerInside" />
+
     <TextView
-        android:id="@+id/name"
-        android:layout_width="200dp"
+        android:id="@+id/title"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@id/img"
-        android:layout_marginTop="10dip"
+        android:layout_alignParentTop="true"
         android:layout_marginLeft="20dip"
-        android:layout_toRightOf="@id/img"
-        android:textStyle="bold" 
-        android:textSize = "17sp"
-        />
-    
+        android:layout_marginTop="20dip"
+        android:layout_toRightOf="@id/thumbnail"
+        android:textSize="20sp"
+        android:textStyle="bold" />
+
     <TextView
         android:id="@+id/author"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/img"
-        android:layout_below="@id/name"
-        android:layout_alignLeft="@id/name"
-        /> 
+        android:layout_alignLeft="@id/title"
+        android:layout_below="@id/title"
+        android:textSize="17sp" />
+
     <TextView
-        android:id="@+id/pubYear"
+        android:id="@+id/isbn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/author"
-        />
- 
-    <TextView
-        android:id="@+id/desc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_alignLeft="@id/title"
         android:layout_below="@id/author"
-        android:layout_marginTop="2dip"
-        android:layout_marginLeft="20dip"
-        android:layout_toRightOf="@id/img"
-        android:gravity="right"
-        android:textSize="10dp"
+        android:textSize="15sp"
         android:textStyle="italic" />
-    
+
+    <TextView
+        android:id="@+id/publisher"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_below="@id/title"
+        android:layout_marginRight="20dp"
+        android:textAlignment="viewEnd"
+        android:textSize="17sp" />
+
+    <TextView
+        android:id="@+id/pubdate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_below="@id/publisher"
+        android:layout_marginRight="20dp"
+        android:textAlignment="viewEnd"
+        android:textSize="15sp"
+        android:textStyle="italic" />
 
 </RelativeLayout>
