--- a/res/layout/item_pager_image.xml
+++ b/res/layout/item_pager_image.xml
@@ -6,13 +6,13 @@
 
     <ImageView
         android:id="@+id/pager_image"
-        android:layout_width="200dp"
+        android:layout_width="300dp"
         android:layout_height="300dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="10dip"
         android:layout_marginLeft="20dip"
-        android:adjustViewBounds="true" />
+        android:scaleType="fitCenter" />
 
     <ProgressBar
         android:id="@+id/loading"
