--- a/res/layout/item_pager_image.xml
+++ b/res/layout/item_pager_image.xml
@@ -6,46 +6,84 @@
 
     <ImageView
         android:id="@+id/pager_image"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
+        android:layout_width="220dp"
+        android:layout_height="330dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="10dip"
         android:layout_marginLeft="20dip"
+        android:layout_marginTop="20dip"
         android:scaleType="fitCenter" />
 
     <ProgressBar
         android:id="@+id/loading"
-        android:layout_width="200dp"
-        android:layout_height="300dp"
+        android:layout_width="220dp"
+        android:layout_height="330dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
+        android:layout_marginLeft="10dip"
         android:layout_marginTop="10dip"
-        android:layout_marginLeft="20dip"
         android:visibility="gone" />
 
     <TextView
         android:id="@+id/title"
         android:layout_width="500dp"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@id/pager_image"
-        android:layout_marginTop="10dip"
-        android:layout_marginLeft="20dip"
+        android:layout_alignParentTop="@id/pager_image"
+        android:layout_marginLeft="15dip"
+        android:layout_marginTop="20dip"
         android:layout_toRightOf="@id/pager_image"
-        android:textStyle="bold" 
-        android:textSize = "25dip" />
- 
+        android:textSize="27sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/author"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@id/title"
+        android:layout_below="@id/title"
+        android:layout_marginTop="10dip"
+        android:textSize="23sp" />
+
+    <TextView
+        android:id="@+id/publisher"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@id/title"
+        android:layout_below="@id/author"
+        android:layout_marginTop="10dip"
+        android:textSize="21sp" />
+
+    <TextView
+        android:id="@+id/pubdate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@id/title"
+        android:layout_below="@id/publisher"
+        android:layout_marginTop="5dip"
+        android:textAlignment="viewEnd"
+        android:textSize="21sp" />
+
+    <TextView
+        android:id="@+id/isbn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@id/title"
+        android:layout_below="@id/pubdate"
+        android:layout_marginTop="10dip"
+        android:textSize="21sp"
+        android:textStyle="italic" />
+
     <TextView
         android:id="@+id/summary"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dip"
-        android:layout_marginLeft="20dip"
+        android:layout_height="match_parent"
         android:layout_below="@id/pager_image"
-        android:gravity="right"
-        android:textSize="20sp"
-        android:textStyle="italic"
+        android:layout_marginBottom="20dip"
+        android:layout_marginLeft="20dip"
+        android:layout_marginRight="20dip"
+        android:layout_marginTop="10dip"
         android:maxLines="50"
-        android:scrollbars="vertical" />
-    
+        android:scrollbars="vertical"
+        android:textSize="19sp" />
+
 </RelativeLayout>
