--- a/res/layout/book_listview.xml
+++ b/res/layout/book_listview.xml
@@ -3,7 +3,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="org.dreamcorps.ui.BookListviewActivity"
+    tools:context="org.dreamcorps.ui.BookListActivity"
     tools:ignore="MergeRootFrame">
     <ListView
         android:id="@+id/bookListview"
